fix wrapping for mobile layouts

--- a/style.css
+++ b/style.css
@@ -109,8 +109,8 @@ body {
 /* What I do */
 .what-i-do {
   /* outline: 1px solid gray; */
-  min-height: 600px;
-  height: calc(100vh);
+  /* min-height: 600px;
+  height: calc(100vh); */
   background-color: hsl(00, 40%, 97%);
   display: flex;
   flex-direction: column;
@@ -128,6 +128,7 @@ body {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
+  flex-wrap: wrap;
   align-items: flex-start;
   width: 100%;
 }
@@ -172,9 +173,13 @@ First Media QUery
 }
 @media (min-width: 1024px) {
   .hero h1 {
-    font-size: 8em;
+    font-size: 7em;
   }
   .hero h2 {
     font-size: 2.5em;
+  }
+
+  .what-i-do {
+    height: calc(100vh);
   }
 }
